--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="reset.css"/>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="header_nav">
+            <a class="header_nav_link">Home</a>
+            <a class="header_nav_link">About</a>
+            <a class="header_nav_link">Contact</a>
+        </nav>
+        <h2 class="header_logo">Landing</h2>
+        <button class="header_btn">Buy Now</button>
+    </header>
 </body>
 </html>
