--- a/index.html
+++ b/index.html
@@ -20,5 +20,15 @@
         <h2 class="header_logo">Landing</h2>
         <button class="header_btn">Buy Now</button>
     </header>
+    <section class="hero">
+        <div class="hero_left">
+            <h2 class="hero_left_title">Introduce Your Product Quickly & Effectively</h2>
+            <p class="hero_left_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+            <button class="hero_left_btn">Purchase UI Kit</button>
+            <button class="hero_left_btn2">Learn More</button>
+        </div>
+        <img class="hero_img" src="img/image.png">
+    </section>
 </body>
 </html>
