Add light section

--- a/index.html
+++ b/index.html
@@ -30,5 +30,25 @@
         </div>
         <img class="hero_img" src="img/image.png">
     </section>
+    <section class="light">
+        <div class="light_left">
+            <h2 class="light_left_title">Light, Fast & Powerful</h2>
+            <p class="light_left_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+                <div class="light_left_bottom">
+                    <div class="light_left_bottom_left">
+                        <img class="light_left_bottom_img" src="img/buildings-svgrepo-com.svg">
+                        <h2 class="light_left_bottom_title">Title Goes Here</h2>
+                        <p class="light_left_bottom_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
+                    </div>
+                    <div class="light_left_bottom_right">
+                        <img class="light_left_bottom_img" src="img/buildings-svgrepo-com.svg">
+                        <h2 class="light_left_bottom_title">Title Goes Here</h2>
+                        <p class="light_left_bottom_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
+                    </div>
+                </div>
+        </div>
+        <img class="light_img" src="img/image2.png">
+    </section>
 </body>
 </html>
