add section fast

--- a/index.html
+++ b/index.html
@@ -50,5 +50,13 @@
         </div>
         <img class="light_img" src="img/image2.png">
     </section>
+    <section class="fast">
+        <img class="fast_img" src="img/image3.png">
+        <div class="fast_right">
+            <h2 class="fast_right_title">Light, Fast & Powerful</h2>
+            <p class="fast_right_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+        </div>
+    </section>
 </body>
 </html>
