add section fast1

--- a/index.html
+++ b/index.html
@@ -58,5 +58,13 @@
                 mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
         </div>
     </section>
+    <section class="fast1">
+        <img class="fast1_img" src="img/image3_2.png">
+        <div class="fast1_right">
+            <h2 class="fast1_right_title">Light, Fast & Powerful</h2>
+            <p class="fast1_right_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+        </div>
+    </section>
 </body>
 </html>
