add section fast2 and fix margin fast1

--- a/index.html
+++ b/index.html
@@ -66,5 +66,14 @@
                 mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
         </div>
     </section>
+    <section class="fast2">
+        <img class="fast2_img" src="img/image3_3.png">
+        <div class="fast2_right">
+            <h2 class="fast2_right_title">Light, Fast & Powerful</h2>
+            <p class="fast2_right_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+                <button class="fast2_btn">Purchase Now</button>                
+        </div>
+    </section>
 </body>
 </html>
