add pricing section

--- a/index.html
+++ b/index.html
@@ -75,5 +75,13 @@
                 <button class="fast2_btn">Purchase Now</button>                
         </div>
     </section>
+    <section class="pricing">
+        <h2 class="pricing_title">A Price To Suit Everyone</h2>
+        <p class="pricing_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus</p>
+        <h1 class="pricing_product_price">$40</h1>
+        <p class="pricing_product_name">UI Design Kit</p>
+        <p class="pricing_text2">See, One price. Simple.</p>
+        <button class="pricing_btn">Purchase Now</button>
+    </section>
 </body>
 </html>
