--- a/index.html
+++ b/index.html
@@ -83,5 +83,23 @@
         <p class="pricing_text2">See, One price. Simple.</p>
         <button class="pricing_btn">Purchase Now</button>
     </section>
+    <footer class="footer">
+        <div class="footer_up">
+            <p class="footer_up_copyright">©2023 Yourcompany</p>
+            <h3 class="footer_up_logo">Landing</h3>
+            <button class="footer_up_btn">Purchase now</button>
+        </div>
+        <hr class="footer_line">
+        <div class="footer_bottom">
+        <nav class="footer_bottom_nav">
+            <a href="#" class="footer_bottom_nav_link">Home</a>
+            <a href="#" class="footer_bottom_nav_link">About</a>
+            <a href="#" class="footer_bottom_nav_link">Contact</a>
+        </nav>
+        <div class="footer_bottom_right">
+            <img src="" class="footer_bottom_right_svg">
+        </div>
+        </div>
+    </footer>
 </body>
 </html>
