Added scss and adjusted the code for it. Added icons to the footer. Changed everything img to svg

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button class="hero_left_btn">Purchase UI Kit</button>
             <button class="hero_left_btn2">Learn More</button>
         </div>
-        <img class="hero_img" src="img/image.png">
+        <img class="hero_img" src="img/image.svg">
     </section>
     <section class="light">
         <div class="light_left">
@@ -48,10 +48,10 @@
                     </div>
                 </div>
         </div>
-        <img class="light_img" src="img/image2.png">
+        <img class="light_img" src="img/image2.svg">
     </section>
     <section class="fast">
-        <img class="fast_img" src="img/image3.png">
+        <img class="fast_img" src="img/image3.svg">
         <div class="fast_right">
             <h2 class="fast_right_title">Light, Fast & Powerful</h2>
             <p class="fast_right_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
@@ -59,7 +59,7 @@
         </div>
     </section>
     <section class="fast1">
-        <img class="fast1_img" src="img/image3_2.png">
+        <img class="fast1_img" src="img/image3_2.svg">
         <div class="fast1_right">
             <h2 class="fast1_right_title">Light, Fast & Powerful</h2>
             <p class="fast1_right_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
@@ -67,7 +67,7 @@
         </div>
     </section>
     <section class="fast2">
-        <img class="fast2_img" src="img/image3_3.png">
+        <img class="fast2_img" src="img/image3_3.svg">
         <div class="fast2_right">
             <h2 class="fast2_right_title">Light, Fast & Powerful</h2>
             <p class="fast2_right_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
@@ -97,7 +97,11 @@
             <a href="#" class="footer_bottom_nav_link">Contact</a>
         </nav>
         <div class="footer_bottom_right">
-            <img src="" class="footer_bottom_right_svg">
+            <img src="img/Instagram Copy 4.svg" class="footer_bottom_right_svg">
+            <img src="img/Instagram Copy 3.svg" class="footer_bottom_right_svg">
+            <img src="img/Instagram Copy 2.svg" class="footer_bottom_right_svg">
+            <img src="img/Instagram Copy.svg" class="footer_bottom_right_svg">
+            <img src="img/Instagram.svg" class="footer_bottom_right_svg">
         </div>
         </div>
     </footer>
