Sorted all images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button class="hero_left_btn">Purchase UI Kit</button>
             <button class="hero_left_btn2">Learn More</button>
         </div>
-        <img class="hero_img" src="img/image.svg">
+        <img class="hero_img" src="img/MainImg/HeroImg.svg">
     </section>
     <section class="light">
         <div class="light_left">
@@ -37,21 +37,21 @@
                 mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
                 <div class="light_left_bottom">
                     <div class="light_left_bottom_left">
-                        <img class="light_left_bottom_img" src="img/buildings-svgrepo-com.svg">
+                        <img class="light_left_bottom_img" src="img/LightIcon.svg">
                         <h2 class="light_left_bottom_title">Title Goes Here</h2>
                         <p class="light_left_bottom_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
                     </div>
                     <div class="light_left_bottom_right">
-                        <img class="light_left_bottom_img" src="img/buildings-svgrepo-com.svg">
+                        <img class="light_left_bottom_img" src="img/LightIcon.svg">
                         <h2 class="light_left_bottom_title">Title Goes Here</h2>
                         <p class="light_left_bottom_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
                     </div>
                 </div>
         </div>
-        <img class="light_img" src="img/image2.svg">
+        <img class="light_img" src="img/MainImg/LightImg.svg">
     </section>
     <section class="fast">
-        <img class="fast_img" src="img/image3.svg">
+        <img class="fast_img" src="img/MainImg/FastImg1.svg">
         <div class="fast_right">
             <h2 class="fast_right_title">Light, Fast & Powerful</h2>
             <p class="fast_right_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
@@ -59,7 +59,7 @@
         </div>
     </section>
     <section class="fast1">
-        <img class="fast1_img" src="img/image3_2.svg">
+        <img class="fast1_img" src="img/MainImg/FastImg2.svg">
         <div class="fast1_right">
             <h2 class="fast1_right_title">Light, Fast & Powerful</h2>
             <p class="fast1_right_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
@@ -67,7 +67,7 @@
         </div>
     </section>
     <section class="fast2">
-        <img class="fast2_img" src="img/image3_3.svg">
+        <img class="fast2_img" src="img/MainImg/FastImg3.svg">
         <div class="fast2_right">
             <h2 class="fast2_right_title">Light, Fast & Powerful</h2>
             <p class="fast2_right_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
@@ -97,11 +97,11 @@
             <a href="#" class="footer_bottom_nav_link">Contact</a>
         </nav>
         <div class="footer_bottom_right">
-            <img src="img/Instagram Copy 4.svg" class="footer_bottom_right_svg">
-            <img src="img/Instagram Copy 3.svg" class="footer_bottom_right_svg">
-            <img src="img/Instagram Copy 2.svg" class="footer_bottom_right_svg">
-            <img src="img/Instagram Copy.svg" class="footer_bottom_right_svg">
-            <img src="img/Instagram.svg" class="footer_bottom_right_svg">
+            <img src="img/FooterIcons/Facebook1.svg" class="footer_bottom_right_svg">
+            <img src="img/FooterIcons/LinkedIn2.svg" class="footer_bottom_right_svg">
+            <img src="img/FooterIcons/Twitter3.svg" class="footer_bottom_right_svg">
+            <img src="img/FooterIcons/YouTube4.svg" class="footer_bottom_right_svg">
+            <img src="img/FooterIcons/Instagram5.svg" class="footer_bottom_right_svg">
         </div>
         </div>
     </footer>
